unpackaged/main/default/objects/KCSArticle_ka__c/fields/ArticleNumber__c.field-meta.xml
<CustomField>
    <fullName>ArticleNumber__c</fullName>
    <label>ArticleNumber</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>