unpackaged/main/default/objects/KCSArticle_ka__c/fields/CaseAssociationCount__c.field-meta.xml
<CustomField>
    <fullName>CaseAssociationCount__c</fullName>
    <label>CaseAssociationCount</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>