unpackaged/main/default/objects/KCSArticle_ka__c/fields/FirstPublishedDate__c.field-meta.xml
<CustomField>
    <fullName>FirstPublishedDate__c</fullName>
    <label>FirstPublishedDate</label>
    <type>DateTime</type>
</CustomField>