unpackaged/main/default/objects/KCSArticle_ka__c/fields/LastPublishedDate__c.field-meta.xml
<CustomField>
    <fullName>LastPublishedDate__c</fullName>
    <label>LastPublishedDate</label>
    <type>DateTime</type>
</CustomField>